a11y: fix low contrast for filter

--- a/src/components/ClassSchedule/classschedule.css
+++ b/src/components/ClassSchedule/classschedule.css
@@ -135,7 +135,7 @@ a.cancelled {
 }
 
 #filterButton {
-  color: #409EFF;
+  color: #2272D6;
 }
 
 .button-group .filter-button + .filter-button {
